# cmake-fetch-content-perf

./: .gitignore  CMakeLists.txt  README.md  scratch.cpp
